<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/addition_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/addition"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/subtraction_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:textAppearance="@style/boba_cups_big_text_style"
        android:background="@drawable/button_choose_background"
        app:backgroundTint="@color/khaki"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/subtraction_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/subtraction"
        app:layout_constraintTop_toBottomOf="@+id/addition_button"
        app:layout_constraintBottom_toTopOf="@+id/multiplication_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.50"
        android:textAppearance="@style/boba_cups_big_text_style"
        android:background="@drawable/button_choose_background"
        app:backgroundTint="@color/forest_green"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/multiplication_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawablePadding="30dp"
android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/multiplication"
        app:layout_constraintTop_toBottomOf="@+id/subtraction_button"
        app:layout_constraintBottom_toTopOf="@+id/division_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:textAppearance="@style/boba_cups_big_text_style"
        android:background="@drawable/button_choose_background"
        app:backgroundTint="@color/goldenrod"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/division_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_choose_background"
        android:text="@string/division"
        android:textAppearance="@style/boba_cups_big_text_style"
        app:backgroundTint="@color/tomato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication_button"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>