<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/easy_level_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_choose_background"
        android:text="@string/easy"
        android:textAppearance="@style/boba_cups_text_style"
        app:backgroundTint="@color/forest_green"
        app:layout_constraintBottom_toTopOf="@+id/normal_level_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/normal_level_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_choose_background"
        android:text="@string/normal"
        android:textAppearance="@style/boba_cups_text_style"
        app:backgroundTint="@color/goldenrod"
        app:layout_constraintBottom_toTopOf="@+id/hard_level_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_level_button"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/hard_level_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_choose_background"
        android:text="@string/hard"
        android:textAppearance="@style/boba_cups_text_style"
        app:backgroundTint="@color/tomato"
        app:layout_constraintBottom_toTopOf="@+id/test_level_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_level_button"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/test_level_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_choose_background"
        android:text="@string/test"
        android:textAppearance="@style/boba_cups_text_style"
        app:backgroundTint="@color/khaki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hard_level_button"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>